ec2.tf
# aws key pair
resource "aws_key_pair" "terra_key" {
  key_name   = "deployer_key"
  public_key = file("terra-key.pub")
}

# aws default vpc
resource "aws_default_vpc" "default_vpc" {

}

# aws security group
resource "aws_security_group" "terra_sg" {
  name        = "terra_sg"
  description = "Allow user to connect"
  vpc_id      = aws_default_vpc.default_vpc.id

  # inbound rule
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # outbound rule
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


# ec2 instance
resource "aws_instance" "terra_instance" {
  for_each = tomap({
    "mainul-t2-medium" = "t2.medium"
    "mainul-t2-micro"  = "t2.micro"
  })
  ami                         = var.ec2_ami_id
  instance_type               = each.value
  key_name                    = aws_key_pair.terra_key.key_name
  vpc_security_group_ids      = [aws_security_group.terra_sg.id]
  associate_public_ip_address = true
  #user_data                   = file("automate.sh")

  root_block_device {
    volume_size = var.ec2_root_storage_size
    volume_type = "gp3"
  }

  tags = {
    Name = each.key
  }
}
